Update README to be in-line with recent changes